--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
  
 </head>
 <body>
+    
     <div class="firstsection">
 
         <div class="header">
@@ -61,15 +62,16 @@
                 <div class="headertext">this is some subtext under an illustration or image</div>
             </div>
         </div>
+    </div>
 
-      <div class="thirdsection">
+    <div class="thirdsection">
         <div class="thirdsectiontext">
             <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
             <div class="thor">-Thor, God of Thunder</div>
         </div>
-      </div>
+    </div>
 
-      <div class="fourthsection">
+    <div class="fourthsection">
         <div class="fourthbox">
             <div class="fourthtext">
                 <div class="firstline">
@@ -80,7 +82,12 @@
             </div>
             <div class="fourthbutton"><button>Sign up!</button></div>
         </div>
-      </div>
+    </div>
+
+    <div class="fifthsection">
+        <span style="font-size: 15px;">Copyright © The Odin Project 2021 (implemented by victoriadsp)</span>
+    </div>
+     
 
 
 
